Remove outdated code